--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,8 @@ test:
 #
 production:
   <<: *default
-  database: hello_world_production
-  username: hello_world
-  password: <%= ENV['HELLO_WORLD_DATABASE_PASSWORD'] %>
+  database: <%= ENV['RDS_DATABASE'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOST'] %>
+  post: 5432
